@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+plugins/cfpython/cfpython.c: Remove some Py_DECREF() calls in the python module.
+  This fixes bug #2459929 (DECREF error, bombs server if python is strict).
+  However, I'm not sure this is the correct way to fix that bug.
+Arvid Norlander 2009-01-29
+
 macros/cf_python.m4: Add python 2.6 to the python path search lists as well.
 Arvid Norlander 2009-01-28
 
